--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Sep 27 08:59:00 MSK 2025
-sdk.dir=C\:\\Users\\aarapov\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Uname\\AppData\\Local\\Android\\Sdk
