--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'com.example.osclassapp'
-    compileSdk 33 // Понижаем до 33
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.osclassapp"
